# gptpdf_LaTeX

./: README.md  pyproject.toml
examples/: PDF_to_LaTeX.py
gptpdf/: doclayout_yolo.py  parse.py
