[tool.poetry]
name = "gptpdf"
version = "0.0.15"
description = "Using GPT to parse PDF"
authors = ["Chen Li <lichenarthurdata@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/CosmosShadow/gptpdf"
packages = [
    { include = "gptpdf" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
GeneralAgent = "^0.3.21"
shapely = "^2.0.7"
pymupdf = "^1.24.7"
python-dotenv = "^1.0.0"
matplotlib = "^3.9.4"
huggingface-hub = "^0.26.2"
pillow = "^9.5.0"
torch = "^1.12.1"
numpy = "^1.26.0"
nltk = "^3.10.0"
requests = "^2.31.0"
pdfrw = "^0.4"
doclayout-yolo = ">=0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[[tool.poetry.source]]
name = "PyPI"
priority="primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
